--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -1,12 +1,12 @@
 name: Project Data to Pages
-on: [push]
-#   push:
-#     branches:
-#       - master
-#     paths:
-#       - 'project/model_card.md'
-#       - 'project/data_dictionary.md'
-#       - 'project/model_events.csv'
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - 'project/model_card.md'
+      - 'project/data_dictionary.md'
+      - 'project/model_events.csv'
 
 jobs:
   copy-build-deploy:
@@ -26,16 +26,15 @@ jobs:
           rm -rf _site
           sudo chmod -R 777 .
 
-#       - name: Setup tmate session
-#         uses: mxschmitt/action-tmate@v1
-
       - name: Jekyll build
         run: |
             docker run  -v /home/runner/work/actions-ml-cicd/actions-ml-cicd/docs:/workspace -w /workspace jekyll/jekyll jekyll build
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_DIR: ./docs/_site
-          PUBLISH_BRANCH: master
+#       - name: Deploy
+#         uses: peaceiris/actions-gh-pages@v2
+#         env:
+#           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+#           PUBLISH_DIR: ./docs/_site
+#           PUBLISH_BRANCH: master
+#         with:
+#           keepFiles: true  
