--- a/.github/workflows/nb2docs.yaml
+++ b/.github/workflows/nb2docs.yaml
@@ -19,7 +19,7 @@ jobs:
     - uses: fastai/fastpages@master
       with:
         BOOL_SAVE_MARKDOWN: true
-        SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+        SSH_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         FORMAT: 'notebook'
 
     - name: setup directories for Jekyll build
@@ -36,5 +36,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v2
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PUBLISH_DIR: ./_site
+        PUBLISH_DIR: ./docs/_site
         PUBLISH_BRANCH: gh-pages
