--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -32,7 +32,7 @@ jobs:
             docker run  -v /home/runner/work/actions-ml-cicd/actions-ml-cicd/docs:/workspace -w /workspace jekyll/jekyll jekyll build
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3.0.3
+        uses: peaceiris/actions-gh-pages@master
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           PUBLISH_DIR: ./_site
