--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,6 @@ jobs:
       uses: peaceiris/actions-gh-pages@v2
       if: github.event_name == 'push'
       env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: ./docs/_site
