--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -32,9 +32,10 @@ jobs:
         with:
           args: /bin/bash -c "cd docs; bundle install; bundle exec jekyll build"
 
+    # only deploy upon a push to master
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3.0.3
+        uses: peaceiris/actions-gh-pages@v2
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_DIR: ./docs/_site
           PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./docs/_site
