--- a/.github/workflows/copy_to_pages.yaml
+++ b/.github/workflows/copy_to_pages.yaml
@@ -34,7 +34,7 @@ jobs:
 
     # only deploy upon a push to master
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@master
+        uses: peaceiris/actions-gh-pages@v2
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           PUBLISH_BRANCH: gh-pages
