--- a/.github/workflows/nb2docs.yaml
+++ b/.github/workflows/nb2docs.yaml
@@ -30,7 +30,9 @@ jobs:
         pip install -e nbdev
         cp nbdev/settings.ini .
         python action_files/nb2docs.py
-        ./action_files/push_notebooks.sh
+    
+    - name: commit & push files
+      run: ./action_files/push_notebooks.sh
 
     - name: setup directories for Jekyll build
       run: |
