--- a/.github/workflows/nb2docs.yaml
+++ b/.github/workflows/nb2docs.yaml
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: '3.6'
         architecture: 'x64'
-    
+
     - name: Run notebook converter
       run: |
         chmod -R 777 docs/docs/reports
@@ -36,15 +36,14 @@ jobs:
         cd docs
         rm -rf _site
         sudo chmod -R 777 .
-        
+
     - name: Jekyll build
       uses: docker://jekyll/jekyll
       with:
         args: /bin/bash -c "cd docs; bundle install; bundle exec jekyll build"
 
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PUBLISH_DIR: ./docs/_site
-        PUBLISH_BRANCH: gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        publish_dir: ./docs/_site
